<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOGIN</string>
    <string name="animation_button">ANIMATION</string>

    <!-- Login Screen Strings -->
    <string name="password_hint">Password</string>
    <string name="default_username">info@DATechnologies.co</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="login_confirm_button">OK</string>

    <!-- Chat Screen Strings -->
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Suspendisse pharetra, sapien at luctus semper,
        justo dui accumsan lorem,
        nec pretium dui eros pharetra leo.
    </string>
    <string name="default_name">James</string>

    <!-- Animation Screen Strings-->
    <string name="fade_in_button">FADE IN</string>
    <string name="custom_animation_button">ANIMATE</string>

</resources>
